[project]
name = "ai-research-ingestion"
version = "0.1.0"
description = "Multimodal RAG ingestion service prototype"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
